<resources>
    <string name="app_name">Help Desk</string>
    <string name="job_lookup">Ticket Lookup</string>
    <string name="assets">Assets</string>
    <string name="create_job_title">Title</string>
    <string name="create_job_description">Description</string>
    <string name="create_job_engineer">Engineer</string>
    <string name="create_job_asset">Asset</string>
    <string name="create_job_customer">Customer</string>
    <string name="create_button">CREATE TICKET</string>
    <string name="job_lookup_head">Ticket lookup</string>
    <string name="job_lookup_button">Lookup</string>
    <string name="job_lookup_text">Enter Job ID:</string>
    <string name="job_lookup_title">Title:</string>
    <string name="job_lookup_ID">ID:</string>
    <string name="job_lookup_engineer">Engineer:</string>
    <string name="job_lookup_asset">Asset:</string>
    <string name="job_lookup_customer">Customer:</string>
    <string name="job_lookup_description">Description:</string>
    <string name="job_lookup_created">Created:</string>
    <string name="lookup_checkbox">Completed</string>
    <string name="lookup_update">Update</string>
    <string name="list_text">Open tickets</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="shutdown">Shutdown</string>
    <string name="back">Back</string>
    <string name="title_activity_about">About</string>
    <string name="error_title">Enter a title</string>

    <!-- string array for Create Severity -->
    <string-array name="create_severity">
        <item>[Select severity]</item>
        <item>1-Critical</item>
        <item>2-High</item>
        <item>3-Medium</item>
        <item>4-Low</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
