<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_job_lookup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a13070817.ticketmanagementsystem.JobLookup">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <TextView
        android:text="@string/job_lookup_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_JobCustomer"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_above="@+id/JobCustomer"
        android:layout_alignLeft="@+id/JobCustomer"
        android:layout_alignStart="@+id/JobCustomer" />

    <TextView
        android:text="@string/job_lookup_engineer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_JobEngineer"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_above="@+id/JobEngineer"
        android:layout_alignLeft="@+id/JobEngineer"
        android:layout_alignStart="@+id/JobEngineer" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/JobCustomer"
        android:layout_alignBaseline="@+id/JobAsset"
        android:layout_alignBottom="@+id/JobAsset"
        android:layout_alignRight="@+id/JobDescription"
        android:layout_alignEnd="@+id/JobDescription"
        android:layout_toRightOf="@+id/JobAsset"
        android:layout_toEndOf="@+id/JobAsset"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/JobEngineer"
        android:layout_alignBaseline="@+id/JobID"
        android:layout_alignBottom="@+id/JobID"
        android:layout_alignRight="@+id/JobDescription"
        android:layout_alignEnd="@+id/JobDescription" />

    <TextView
        android:text="@string/job_lookup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_JobTitle"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_above="@+id/JobTitle"
        android:layout_alignLeft="@+id/JobTitle"
        android:layout_alignStart="@+id/JobTitle" />

    <TextView
        android:text="@string/job_lookup_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_JobID"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_below="@+id/JobTitle"
        android:layout_alignLeft="@+id/JobTitle"
        android:layout_alignStart="@+id/JobTitle" />

    <TextView
        android:text="@string/job_lookup_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_JobAsset"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_below="@+id/JobID"
        android:layout_alignLeft="@+id/JobID"
        android:layout_alignStart="@+id/JobID" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/JobID"
        android:layout_width="100dp"
        android:layout_above="@+id/text_JobCustomer"
        android:layout_toLeftOf="@+id/text_JobEngineer"
        android:layout_alignLeft="@+id/JobAsset"
        android:layout_alignStart="@+id/JobAsset" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/JobAsset"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/text_JobDescription"
        android:layout_toLeftOf="@+id/JobEngineer"
        android:layout_alignLeft="@+id/text_JobDescription"
        android:layout_alignStart="@+id/text_JobDescription" />

    <TextView
        android:text="@string/job_lookup_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_JobDescription"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_above="@+id/JobDescription"
        android:layout_alignLeft="@+id/JobDescription"
        android:layout_alignStart="@+id/JobDescription" />

    <Button
        android:text="@string/lookup_update"
        android:layout_height="wrap_content"
        android:id="@+id/lookup_update_button"
        android:onClick="updateJob"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/JobDescription"
        android:layout_alignEnd="@+id/JobDescription"
        android:layout_width="100dp"
        android:layout_toRightOf="@+id/text_JobEngineer"
        android:layout_toEndOf="@+id/text_JobEngineer" />

    <Button
        android:id="@+id/lookup_button"
        android:layout_height="50dp"
        android:text="@string/job_lookup_button"
        android:layout_gravity="bottom"
        android:onClick="lookupJob"

        android:layout_width="100dp"
        android:layout_alignTop="@+id/job_lookup_input"
        android:layout_alignRight="@+id/JobCustomer"
        android:layout_alignEnd="@+id/JobCustomer"
        android:layout_toRightOf="@+id/text_JobEngineer"
        android:layout_toEndOf="@+id/text_JobEngineer" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/job_lookup_input"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:hint="Enter Job ID"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignLeft="@+id/text_JobTitle"
        android:layout_alignStart="@+id/text_JobTitle" />

    <CheckBox
        android:text="@string/lookup_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:checked="false"
        android:duplicateParentState="false"
        android:textAllCaps="false"
        android:layout_below="@+id/JobDescription"
        android:layout_alignLeft="@+id/JobDescription"
        android:layout_alignStart="@+id/JobDescription"
        android:layout_alignBottom="@+id/lookup_update_button"
        android:layout_alignRight="@+id/job_lookup_input"
        android:layout_alignEnd="@+id/job_lookup_input" />

    <EditText
        android:layout_height="100dp"
        android:inputType="textCapSentences|textAutoCorrect"
        android:ems="10"
        android:id="@+id/JobDescription"
        android:layout_marginBottom="36dp"
        android:layout_width="350dp"
        android:layout_above="@+id/lookup_update_button"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/JobTitle"
        android:inputType="textCapSentences|textAutoCorrect"
        android:layout_above="@+id/text_JobEngineer"
        android:layout_alignLeft="@+id/JobID"
        android:layout_alignStart="@+id/JobID" />


</RelativeLayout>
