<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_job"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f2f2f2"
    tools:context="a13070817.ticketmanagementsystem.CreateJob">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/create_job_intro_text"
        android:layout_height="wrap_content"
        android:text="Create a job"/>


    <Button
        android:id="@+id/createButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/create_button"
        android:layout_gravity="bottom"
        android:onClick="insertData"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/create_job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/job_title_text"
        android:layout_below="@+id/create_job_intro_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:text="@string/create_job_engineer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/job_engineer_text"
        android:layout_below="@+id/job_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/job_engineer"
        android:layout_below="@+id/job_engineer_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1" />

    <TextView
        android:text="@string/create_job_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/job_asset_text"
        android:layout_below="@+id/job_engineer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/job_asset"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/job_engineer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1"/>

    <TextView
        android:text="@string/create_job_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/job_customer_text"
        android:layout_below="@+id/job_asset"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/job_customer"
        android:layout_below="@+id/job_customer_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1" />

    <TextView
        android:text="@string/create_job_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/job_description_text"
        android:layout_below="@+id/job_customer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:maxLength="75"
        android:ems="6"
        android:id="@+id/job_description"
        android:layout_below="@+id/job_description_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/job_title"
        android:layout_below="@+id/job_title_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1" />

</RelativeLayout>
